# mangatag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  baozimanhua.py  docker-compose.yml  edit_archive_xml.py  manhuagui.py  pyproject.toml  requirements.txt  run.sh  run_edit_xml.sh  update_archives_with_xml.py  update_xml_numbers.py  webui.py
.cursor/rules/: rule1.mdc
.github/workflows/: docker-build.yml
config/: cookies.json
static/css/: style.css
templates/: edit_xml.html
templates/partials/: csv_area.html  csv_area_import.html  csv_editor.html  save_log.html  scan_result.html
