[project]
name = "mangatag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "aiolimiter",
    "beautifulsoup4",
    "fastapi",
    "gradio>=5.46.1",
    "itsdangerous",
    "jinja2",
    "jsbeautifier",
    "lxml",
    "lzstring",
    "opencc-python-reimplemented",
    "python-multipart",
    "requests",
    "uvicorn[standard]",
]
