[project]
name = "mangatag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "itsdangerous",
    "jinja2",
    "lxml",
    "opencc-python-reimplemented",
    "python-multipart",
    "uvicorn[standard]",
]
