[project]
name = "mangatag"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "itsdangerous",
    "jinja2",
    "lxml",
    "opencc-python-reimplemented",
    "pypinyin",
    "python-multipart",
    "uvicorn[standard]",
]
